--- a/src/components/home/header/index.css
+++ b/src/components/home/header/index.css
@@ -56,6 +56,7 @@
 .header-menu-item>span{
     cursor: pointer;
     white-space: nowrap;
+    color: #29272E;
 }
 .header-menu-list-hover-view{
     display: none;
