--- a/src/components/home/banner/index.css
+++ b/src/components/home/banner/index.css
@@ -27,19 +27,13 @@
     margin: 20px 0px;
 }
 .home-banner-l > p{
-    font-family: PingFang SC;
+    font-family: 'PingFang SC';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 300;
     font-size: 18px;
     line-height: 25px;
-    display: flex;
-    align-items: center;
     /* Theme/Dark/Default */
     color: #16192C;
-    /* Inside auto layout */
-    flex: none;
-    order: 1;
-    flex-grow: 0;
     margin: 20px 0px;
 }
 .home-banner-l > div{
