--- a/src/components/home/footer/index.css
+++ b/src/components/home/footer/index.css
@@ -49,8 +49,9 @@
     /* identical to box height */
     /* Gray 4 */
     color: #BDBDBD;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-align: center;
+    margin: 0;
 }
 @media (max-width: 780px) {
     .footer-link-list{
