--- a/src/components/home/header/index.css
+++ b/src/components/home/header/index.css
@@ -65,7 +65,7 @@
     bottom: 0;
     transform: translateY(100%);
     width: 320px;
-    height: 330px;
+    height: auto;
     background: #FFFFFF;
     /* Shadow-3xl */
     box-shadow: 0px 0px 1px rgba(12, 26, 75, 0.1), 5px 30px 71px rgba(20, 37, 63, 0.08);
